Final push for Assignment 3
Final push for Assignment 3

--- a/public/assignment/css/style.css
+++ b/public/assignment/css/style.css
@@ -57,6 +57,7 @@ nav.navbar.navbar-default a {
     opacity: 0.9;
     padding: 5px;
     border-bottom-left-radius: 10px;
+    z-index: 2;
 }
 
 .wd-youtube-dynamic {
