--- a/public/assignment/views/website/templates/website-new.view.client.html
+++ b/public/assignment/views/website/templates/website-new.view.client.html
@@ -20,7 +20,7 @@
                 New Website
             </a>
             <p class="navbar-text pull-right">
-                <a href="website-new.view.client.html" class="navbar-link">
+                <a href="#!/user/{{model.userId}}/website" class="navbar-link">
           <span class="glyphicon glyphicon-ok">
           </span>
                 </a>
