--- a/public/assignment/views/website/templates/website-edit.view.client.html
+++ b/public/assignment/views/website/templates/website-edit.view.client.html
@@ -24,37 +24,13 @@
                 <ul class="list-group">
                     <li class="list-group-item active">
                         <div class="row">
-                            <div class="col-xs-10">Name</div>
+                            <div class="col-md-5 col-sm-8 col-xs-10">Name</div>
                         </div>
                     </li>
-                    <li class="list-group-item">
+                    <li ng-repeat="website in model.websites" class="list-group-item">
                         <div class="row">
-                            <div class="col-xs-10"><a href="../../page/templates/page-list.view.client.html">Cras justo odio</a></div>
-                            <div class="col-xs-2 "><a href="website-edit.view.client.html"><span class="glyphicon glyphicon-cog pull-right"></span></a></div>
-                        </div>
-                    </li>
-                    <li class="list-group-item">
-                        <div class="row">
-                            <div class="col-xs-10"><a href="../../page/templates/page-list.view.client.html">Dapibus ac facilisis in</a></div>
-                            <div class="col-xs-2"><a href="website-edit.view.client.html"><span class="glyphicon glyphicon-cog pull-right"></span></a></div>
-                        </div>
-                    </li>
-                    <li class="list-group-item">
-                        <div class="row">
-                            <div class="col-xs-10"><a href="../../page/templates/page-list.view.client.html">Morbi leo risus</a></div>
-                            <div class="col-xs-2"><a href="website-edit.view.client.html"><span class="glyphicon glyphicon-cog pull-right"></span></a></div>
-                        </div>
-                    </li>
-                    <li class="list-group-item">
-                        <div class="row">
-                            <div class="col-xs-10"><a href="../../page/templates/page-list.view.client.html">Porta ac consectetur ac</a></div>
-                            <div class="col-xs-2"><a href="website-edit.view.client.html"><span class="glyphicon glyphicon-cog pull-right"></span></a></div>
-                        </div>
-                    </li>
-                    <li class="list-group-item">
-                        <div class="row">
-                            <div class="col-xs-10"><a href="../../page/templates/page-list.view.client.html">Vestibulum at eros</a></div>
-                            <div class="col-xs-2"><a href="website-edit.view.client.html"><span class="glyphicon glyphicon-cog pull-right"></span></a></div>
+                            <div class="col-xs-10"><a href="#!/user/{{model.userId}}/website/{{website._id}}/page">{{website.name}}</a></div>
+                            <div class="col-xs-2 "><a href="#!/user/{{model.userId}}/website/{{website._id}}"><span class="glyphicon glyphicon-cog pull-right"></span></a></div>
                         </div>
                     </li>
                 </ul>
