--- a/public/assignment/views/user/templates/profile.view.client.html
+++ b/public/assignment/views/user/templates/profile.view.client.html
@@ -16,6 +16,8 @@
 <div class="container-fluid">
     <div ng-show="model.error"
          class="alert alert-danger">{{model.error}}</div>
+    <div ng-show="model.message"
+         class="alert alert-info">{{model.message}}</div>
     <form>
         <div class="form-group">
             <label for="username">Username</label>
