--- a/public/assignment/views/user/templates/profile.view.client.html
+++ b/public/assignment/views/user/templates/profile.view.client.html
@@ -56,7 +56,7 @@
     <a class="btn btn-success btn-block"
        ng-click="model.updateUser(model.user)">Update</a>
     <a class="btn btn-success btn-block"
-       ng-click="model.unregisterUser(model.user)">Unregister</a>
+       ng-click="model.deleteUser(model.user)">Unregister</a>
     <a class="btn btn-primary btn-block"
        href="#!/user/{{model.userId}}/website">Websites</a>
     <a class="btn btn-danger  btn-block"
