Fixed error from Assignment 3
Fixed broken links from Assignment 3

--- a/public/assignment/views/website/templates/website-edit.view.client.html
+++ b/public/assignment/views/website/templates/website-edit.view.client.html
@@ -48,7 +48,7 @@
                       class="form-control"
                       rows="5"
                       placeholder="news site"></textarea>
-            <a href="website-list.view.client.html"
+            <a href="#!/user/{{model.userId}}/website"
                class="btn btn-block btn-success">Update</a>
             <a ng-click="model.deleteWebsite(model.website._id)"
                class="btn btn-block btn-danger">Delete</a>
