--- a/public/assignment/views/website/templates/website-new.view.client.html
+++ b/public/assignment/views/website/templates/website-new.view.client.html
@@ -1,14 +1,3 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no"/>
-    <title>New Website</title>
-    <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" rel="stylesheet"/>
-    <link href="../../../css/style.css" rel="stylesheet"/>
-</head>
-<body>
-
 <nav class="navbar navbar-default navbar-fixed-top">
     <div class="container-fluid">
         <div class="navbar-header">
@@ -36,37 +25,13 @@
                 <ul class="list-group">
                     <li class="list-group-item active">
                         <div class="row">
-                            <div class="col-xs-10">Name</div>
+                            <div class="col-md-5 col-sm-8 col-xs-10">Name</div>
                         </div>
                     </li>
-                    <li class="list-group-item">
+                    <li ng-repeat="website in model.websites" class="list-group-item">
                         <div class="row">
-                            <div class="col-xs-10"><a href="../../page/templates/page-list.view.client.html">Cras justo odio</a></div>
-                            <div class="col-xs-2 "><a href="website-edit.view.client.html"><span class="glyphicon glyphicon-cog pull-right"></span></a></div>
-                        </div>
-                    </li>
-                    <li class="list-group-item">
-                        <div class="row">
-                            <div class="col-xs-10"><a href="../../page/templates/page-list.view.client.html">Dapibus ac facilisis in</a></div>
-                            <div class="col-xs-2"><a href="website-edit.view.client.html"><span class="glyphicon glyphicon-cog pull-right"></span></a></div>
-                        </div>
-                    </li>
-                    <li class="list-group-item">
-                        <div class="row">
-                            <div class="col-xs-10"><a href="../../page/templates/page-list.view.client.html">Morbi leo risus</a></div>
-                            <div class="col-xs-2"><a href="website-edit.view.client.html"><span class="glyphicon glyphicon-cog pull-right"></span></a></div>
-                        </div>
-                    </li>
-                    <li class="list-group-item">
-                        <div class="row">
-                            <div class="col-xs-10"><a href="../../page/templates/page-list.view.client.html">Porta ac consectetur ac</a></div>
-                            <div class="col-xs-2"><a href="website-edit.view.client.html"><span class="glyphicon glyphicon-cog pull-right"></span></a></div>
-                        </div>
-                    </li>
-                    <li class="list-group-item">
-                        <div class="row">
-                            <div class="col-xs-10"><a href="../../page/templates/page-list.view.client.html">Vestibulum at eros</a></div>
-                            <div class="col-xs-2"><a href="website-edit.view.client.html"><span class="glyphicon glyphicon-cog pull-right"></span></a></div>
+                            <div class="col-xs-10"><a href="#!/user/{{model.userId}}/website/{{website._id}}/page">{{website.name}}</a></div>
+                            <div class="col-xs-2 "><a href="#!/user/{{model.userId}}/website/{{website._id}}"><span class="glyphicon glyphicon-cog pull-right"></span></a></div>
                         </div>
                     </li>
                 </ul>
@@ -91,6 +56,3 @@
 </div>
 
 <div ng-include="'views/common/footer.view.client.html'"></div>
-
-</body>
-</html>
