--- a/public/assignment/views/page/templates/page-edit.view.client.html
+++ b/public/assignment/views/page/templates/page-edit.view.client.html
@@ -56,7 +56,7 @@
                       rows="5"
                       placeholder="CNN - Home">
             </textarea>
-            <a href="#!/user/{{model.userId}}/website/{{model.websiteId}}/page/"
+            <a ng-click="model.updatePage(model.page)"
                class="btn btn-block btn-success">Update</a>
             <a ng-click="model.deletePage(model.page._id)"
                class="btn btn-block btn-danger">Delete</a>
