Added Server-Side Functionality to Widgets
Added server-side functionality to the widgets.

--- a/public/assignment/views/widget/templates/widget-heading-edit.view.client.html
+++ b/public/assignment/views/widget/templates/widget-heading-edit.view.client.html
@@ -37,7 +37,7 @@
                    placeholder="1"
                    min="1"
                    max="6">
-    <a ng-click="model.deleteWidget(model.widget.widget_id)"
+    <a ng-click="model.deleteWidget(model.widgetId)"
        class="btn btn-block btn-danger">Delete</a>
 
 </div>
