--- a/public/assignment/views/widget/templates/widget-image-edit.view.client.html
+++ b/public/assignment/views/widget/templates/widget-image-edit.view.client.html
@@ -64,7 +64,7 @@
            type="file"
            class="form-control" />
     <a class="btn btn-block btn-primary">Upload Image</a>
-    <a ng-click="model.deleteWidget(model.widget.widget_id)"
+    <a ng-click="model.deleteWidget(model.widgetId)"
        class="btn btn-block btn-danger">Delete</a>
 
 </div>
