--- a/public/assignment/views/widget/templates/widget-youtube-edit.view.client.html
+++ b/public/assignment/views/widget/templates/widget-youtube-edit.view.client.html
@@ -41,7 +41,7 @@
            type="text"
            class="form-control"
            placeholder="1%"/>
-    <a ng-click="model.deleteWidget(model.widget.widget_id)"
+    <a ng-click="model.deleteWidget(model.widgetId)"
        class="btn btn-block btn-danger">Delete</a>
 
 </div>
