--- a/public/assignment/views/widget/templates/widget-image-edit.view.client.html
+++ b/public/assignment/views/widget/templates/widget-image-edit.view.client.html
@@ -44,7 +44,7 @@
            placeholder="1%"/>
 
 
-    <form action="/api/upload"   method="post" enctype="multipart/form-data">
+    <form action="/api/assignment/upload"   method="post" enctype="multipart/form-data">
         <input  name="myFile"    type="file" class="form-control"/>
         <input  name="width"     value="{{model.widget.width}}" style="display: none"/>
         <input  name="userId"    value="{{model.userId}}"   style="display: none"/>
@@ -58,14 +58,14 @@
 
 
 
-    <label for="file">Upload</label>
-    <input ng-model="model.widget.file"
-           id="file"
-           type="file"
-           class="form-control" />
-    <a class="btn btn-block btn-primary">Upload Image</a>
+    <!--<label for="file">Upload</label>-->
+    <!--<input ng-model="model.widget.file"-->
+           <!--id="file"-->
+           <!--type="file"-->
+           <!--class="form-control" />-->
+    <!--<a class="btn btn-block btn-primary">Upload Image</a>-->
     <a ng-click="model.deleteWidget(model.widgetId)"
-       class="btn btn-block btn-danger">Delete</a>
+       class="btn btn-block btn-danger wd-padded-btn">Delete</a>
 
 </div>
 
