--- a/public/assignment/views/widget/templates/widget-image-edit.view.client.html
+++ b/public/assignment/views/widget/templates/widget-image-edit.view.client.html
@@ -43,15 +43,32 @@
            class="form-control"
            placeholder="1%"/>
 
+    <a class="btn btn-info btn-block"
+       href="#!/user/:userId/website/{{model.userId}}/page/{{model.pageId}}/widget/{{model.widgetId}}/search">
+        Search
+    </a>
 
-    <form action="/api/assignment/upload"   method="post" enctype="multipart/form-data">
-        <input  name="myFile"    type="file" class="form-control"/>
-        <input  name="width"     value="{{model.widget.width}}" style="display: none"/>
-        <input  name="userId"    value="{{model.userId}}"   style="display: none"/>
-        <input  name="websiteId" value="{{model.websiteId}}"   style="display: none"/>
-        <input  name="pageId"    value="{{model.pageId}}"   style="display: none"/>
-        <input  name="widgetId"  value="{{model.widget._id}}"   style="display: none"/>
-        <button type="submit"    class="btn btn-block btn-primary">Upload Image</button>
+    <form action="/api/assignment/upload"
+          method="post"
+          enctype="multipart/form-data">
+        <input  name="myFile"
+                type="file" class="form-control"/>
+        <input  name="width"
+                value="{{model.widget.width}}"
+                style="display: none"/>
+        <input  name="userId"
+                value="{{model.userId}}"
+                style="display: none"/>
+        <input  name="websiteId"
+                value="{{model.websiteId}}"
+                style="display: none"/>
+        <input  name="pageId"
+                value="{{model.pageId}}"   style="display: none"/>
+        <input  name="widgetId"
+                value="{{model.widget._id}}"
+                style="display: none"/>
+        <button type="submit"
+                class="btn btn-block btn-primary">Upload Image</button>
     </form>
 
 
