--- a/public/assignment/views/widget/templates/widget-list.view.client.html
+++ b/public/assignment/views/widget/templates/widget-list.view.client.html
@@ -16,7 +16,7 @@
     </div>
 </nav>
 
-<div class="container-fluid">
+<div wbdv-sortable ng-model="model.widgets" class="container-fluid">
     <div ng-repeat="widget in model.widgets" class="wd-widget">
         <div class="wd-widget-toolbar">
             <a href="#!/user/{{model.userId}}/website/{{model.websiteId}}/page/{{model.pageId}}/widget/{{widget._id}}">
@@ -30,7 +30,7 @@
                  ng-bind-html="model.trust(widget.text)">
             </div>
             <div ng-switch-default>
-                <div ng-include="model.widgetUrl(widget)"</div>
+                <div ng-include="model.widgetUrl(widget)"></div>
             </div>
         </div>
     </div>
