--- a/public/assignment/views/widget/templates/widget-flickr-search.view.client.html
+++ b/public/assignment/views/widget/templates/widget-flickr-search.view.client.html
@@ -1,3 +1,14 @@
+<nav class="navbar navbar-default navbar-fixed-top">
+    <div class="container-fluid">
+        <div class="navbar-header">
+            <a class="navbar-brand"
+               href="#!/user/{{model.userId}}/website/{{model.websiteId}}/page/{{model.pageId}}/widget">
+                <span class="glyphicon glyphicon glyphicon-menu-left"></span>
+            </a>
+            <a class="navbar-brand">Search Flickr</a>
+        </div>
+    </div>
+</nav>
 <div class="container-fluid">
     <div class="input-group">
         <input ng-model="searchText"
@@ -18,6 +29,5 @@
                  ng-src="https://farm{{photo.farm}}.staticflickr.com/{{photo.server}}/{{photo.id}}_{{photo.secret}}_s.jpg"/>
         </div>
     </div>
-
-
 </div>
+<div ng-include="'views/common/footer.view.client.html'"></div>
