--- a/public/assignment/views/widget/templates/widget-flickr-search.view.client.html
+++ b/public/assignment/views/widget/templates/widget-flickr-search.view.client.html
@@ -13,7 +13,8 @@
     <div class="input-group">
         <input ng-model="searchText"
                type="text"
-               class="form-control">
+               class="form-control"
+               placeholder="Search Images">
         <span class="input-group-btn">
             <a ng-click="model.searchPhotos(searchText)"
                class="btn btn-default"
