Fixed Widget Functions
Fixed Widget Functions

--- a/public/assignment/views/widget/templates/widget-list.view.client.html
+++ b/public/assignment/views/widget/templates/widget-list.view.client.html
@@ -25,7 +25,7 @@
             <span class="glyphicon glyphicon-align-justify"></span>
         </div>
 
-        <div ng-switch="widget.widgetType">
+        <div ng-switch="widget.type">
     <div ng-switch-when="HTML"
          ng-bind-html="model.trust(widget.text)">
     </div>
