--- a/public/assignment/views/widget/templates/widget-edit.view.client.html
+++ b/public/assignment/views/widget/templates/widget-edit.view.client.html
@@ -16,7 +16,7 @@
     </div>
 </nav>
 
-<div ng-switch="model.widget.widgetType.toLowerCase()">
+<div ng-switch="model.widget.type.toLowerCase()">
     <div ng-switch-when="heading">
         <div ng-include="'views/widget/templates/widget-heading-edit.view.client.html'"></div>
     </div>
