--- a/public/assignment/views/widget/templates/widget-heading-edit.view.client.html
+++ b/public/assignment/views/widget/templates/widget-heading-edit.view.client.html
@@ -19,7 +19,7 @@
                    placeholder="1"
                    min="1"
                    max="6">
-    <a ng-click="model.deleteWidget(model.widgetId)"
+    <a ng-click="model.deleteWidget(model.pageId, model.widgetId)"
        class="btn btn-block btn-danger">Delete</a>
 
 </div>
