Added Text and HTML Widgets
Added Text and HTML Widgets

--- a/public/assignment/views/widget/templates/widget-choose.view.client.html
+++ b/public/assignment/views/widget/templates/widget-choose.view.client.html
@@ -30,6 +30,18 @@
             <span>Create Youtube Widget</span>
         </a>
     </div>
+    <div class="wd-standalone-link">
+        <a ng-click="model.createWidget('html')"
+           class="btn btn-block btn-success">
+            <span>Create HTML Widget</span>
+        </a>
+    </div>
+    <div class="wd-standalone-link">
+        <a ng-click="model.createWidget('input')"
+           class="btn btn-block btn-success">
+            <span>Create Input Widget</span>
+        </a>
+    </div>
 </div>
 
 <div ng-include="'views/common/footer.view.client.html'"></div>
