--- a/public/assignment/views/widget/templates/widget-edit.view.client.html
+++ b/public/assignment/views/widget/templates/widget-edit.view.client.html
@@ -26,6 +26,12 @@
     <div ng-switch-when="youtube">
         <div ng-include="'views/widget/templates/widget-youtube-edit.view.client.html'"></div>
     </div>
+    <div ng-switch-when="html">
+        <div ng-include="'views/widget/templates/widget-youtube-edit.view.client.html'"></div>
+    </div>
+    <div ng-switch-when="input">
+        <div ng-include="'views/widget/templates/widget-input-edit.view.client.html'"></div>
+    </div>
 
 </div>
 
