--- a/public/assignment/views/widget/templates/widget-list.view.client.html
+++ b/public/assignment/views/widget/templates/widget-list.view.client.html
@@ -26,13 +26,22 @@
         </div>
 
         <div ng-switch="widget.type">
-    <div ng-switch-when="HTML"
-         ng-bind-html="model.trust(widget.text)">
+        <div ng-switch-when="HTML"
+             ng-bind-html="model.trust(widget.text)">
+        </div>
+        <div ng-switch-when="INPUT">
+            <div ng-if="widget.formatted" text-angular ta-toolbar="..."></div>
+            <input ng-if="!widget.formatted && (!widget.rows || widget.rows===1)"
+                   placeholder="{{widget.textInput.placeholder}}" class="form-control"/>
+            <textarea ng-if="!widget.formatted && (widget.rows > 1)"
+                      rows="{{widget.rows}}" placeholder="{{widget.placeholder}}"
+                      class="form-control">{{widget.text}}</textarea>
+        </div>
+
+            <div ng-switch-default>
+            <div ng-include="model.widgetUrl(widget)"></div>
+        </div>
     </div>
-    <div ng-switch-default>
-        <div ng-include="model.widgetUrl(widget)"></div>
-    </div>
-</div>
 </div>
 
 </div>
