Added delete button
Added delete button

--- a/public/assignment/views/widget/templates/widget-input-edit.view.client.html
+++ b/public/assignment/views/widget/templates/widget-input-edit.view.client.html
@@ -25,5 +25,8 @@
                type="checkbox">
     </label>
 
+    <a ng-click="model.deleteWidget(model.pageId, model.widgetId)"
+       class="btn btn-block btn-danger">Delete</a>
+
 
 </div>
