--- a/public/project/css/style.css
+++ b/public/project/css/style.css
@@ -5,3 +5,14 @@
 #searchResults {
     padding-top: 15px;
 }
+
+body {
+    padding-top: 60px;
+    padding-bottom: 60px;
+    padding-left: 15px;
+    padding-right: 15px;
+}
+
+.wd-iconLink {
+    color: white;
+}
