Finished adding friend support
Finished adding friend support

--- a/public/project/views/user/templates/friend-list.view.client.html
+++ b/public/project/views/user/templates/friend-list.view.client.html
@@ -12,7 +12,7 @@
     </li>
     <li ng-repeat="friend in model.user.friends" class="list-group-item">
         <div class="row">
-            <div class="col-xs-12"><a href="#!/user/{{model.userId}}/website/{{website._id}}/page">{{friend}}</a></div>
+            <div class="col-xs-12"><a href="#!/user/{{model.userId}}/friend/{{friend}}">{{friend}}</a></div>
         </div>
     </li>
 </ul>
