--- a/public/project/views/user/templates/friend-list.view.client.html
+++ b/public/project/views/user/templates/friend-list.view.client.html
@@ -1,4 +1,4 @@
-<h3>User List</h3>
+<h3>Friend List</h3>
 <ul class="list-group">
     <li class="list-group-item active">
         <div class="row">
