--- a/public/assignment/views/home/templates/home.html
+++ b/public/assignment/views/home/templates/home.html
@@ -1,17 +1,24 @@
-<!-- Fixed navbar -->
 <nav class="navbar navbar-inverse navbar-fixed-top">
     <div class="container">
         <div class="navbar-header">
-            <a class="navbar-brand">Rolllins Assignment</a>
+            <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
+                <span class="sr-only">Toggle navigation</span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+            </button>
+            <a class="navbar-brand" href="#">Rollins</a>
         </div>
         <div id="navbar" class="navbar-collapse collapse">
             <ul class="nav navbar-nav">
-                <li><a href="#!/login">Login</a></li>
-                <li><a href="#!/register">Register</a></li>
-                <li><a href="#!/profile">Profile</a></li>
-                <li><a href="#!/logout">Logout</a></li>
+                <li class="active"><a href="#!/">Home</a></li>
+                <li><a href="#!/admin">Admin</a></li>
+                <li ng-show="!model.currentUser._id"><a href="#!/login">Login</a></li>
+                <li ng-show="!model.currentUser._id"><a href="#!/register">Register</a></li>
+                <li ng-show="model.currentUser._id"><a href="#!/profile">Profile</a></li>
+                <li><a href="">Logout</a></li>
             </ul>
-        </div>
+        </div><!--/.nav-collapse -->
     </div>
 </nav>
 
@@ -21,7 +28,8 @@
     <div class="jumbotron">
         <h1>Assignment 5</h1>
         <p>This is my submission for Assignment 5. I have created database services.</p>
-        <p><a href="#!/login">Click here to login.</a></p>
+        <p ng-show="!model.currentUser._id"><a href="#!/login">Click here to login.</a></p>
+        <p ng-show="model.currentUser._id"><a href="#!/profile">Click here to go to your profile.</a></p>
     </div>
 
     <div class="page-header">
@@ -36,4 +44,4 @@
     <h3>Assignment 4</h3>
     <p>This is my submission for Assignment 4. I have created server side services.</p>
 
-</div> <!-- /container -->
+</div>
