--- a/public/assignment/views/user/templates/profile.view.client.html
+++ b/public/assignment/views/user/templates/profile.view.client.html
@@ -60,7 +60,7 @@
     <a class="btn btn-primary btn-block"
        href="#!/website">Websites</a>
     <a class="btn btn-danger  btn-block"
-       href="#!/login">Logout</a>
+       ng-click="model.logout()">Logout</a>
 </div>
 
 <div ng-include="'views/common/footer.view.client.html'"></div>
