--- a/public/assignment/views/website/templates/website-edit.view.client.html
+++ b/public/assignment/views/website/templates/website-edit.view.client.html
@@ -1,7 +1,7 @@
 <nav class="navbar navbar-default navbar-fixed-top">
     <div class="container-fluid">
         <div class="navbar-header">
-            <a class="navbar-brand" href="#!/user/{{model.userId}}/website">
+            <a class="navbar-brand" href="#!/website">
                 <span class="glyphicon glyphicon glyphicon-menu-left"></span>
             </a>
             <a class="navbar-brand">
@@ -29,8 +29,8 @@
                 </li>
                 <li ng-repeat="website in model.websites" class="list-group-item">
                     <div class="row">
-                        <div class="col-xs-10"><a href="#!/user/{{model.userId}}/website/{{website._id}}/page">{{website.name}}</a></div>
-                        <div class="col-xs-2 "><a href="#!/user/{{model.userId}}/website/{{website._id}}"><span class="glyphicon glyphicon-cog pull-right"></span></a></div>
+                        <div class="col-xs-10"><a href="#!/website/{{website._id}}/page">{{website.name}}</a></div>
+                        <div class="col-xs-2 "><a href="#!/website/{{website._id}}"><span class="glyphicon glyphicon-cog pull-right"></span></a></div>
                     </div>
                 </li>
             </ul>
