--- a/public/assignment/views/website/templates/website-new.view.client.html
+++ b/public/assignment/views/website/templates/website-new.view.client.html
@@ -2,14 +2,15 @@
     <div class="container-fluid">
         <div class="navbar-header">
             <a class="navbar-brand"
-               href="#!/user/{{model.userId}}/website">
+               href="#!/website">
                 <span class="glyphicon glyphicon glyphicon-menu-left"></span>
             </a>
             <a class="navbar-brand">
                 New Website
             </a>
             <p class="navbar-text pull-right">
-                <a href="#!/user/{{model.userId}}/website" class="navbar-link">
+                <a ng-click="model.createWebsite(website)"
+                   class="navbar-link">
           <span class="glyphicon glyphicon-ok">
           </span>
                 </a>
