--- a/public/assignment/views/admin/templates/admin.view.client.html
+++ b/public/assignment/views/admin/templates/admin.view.client.html
@@ -6,7 +6,7 @@
             <a href="#!/admin/user">Users</a>
         </li>
         <li class="list-group-item">
-            <a href="#!/admin/website">Users</a>
+            <a href="#!/admin/website">Websites</a>
         </li>
         <li class="list-group-item">
             Reviews
