Finished Facebook Login
Finished Facebook Login

--- a/public/assignment/css/style.css
+++ b/public/assignment/css/style.css
@@ -90,3 +90,8 @@ nav.navbar.navbar-default a {
 .wd-padded-btn {
     margin-top: 5px;
 }
+
+.wd-btn-facebook {
+    color: #FFFFFF;
+    background-color: #3b5998;
+}
