--- a/public/assignment/views/user/templates/login.view.client.html
+++ b/public/assignment/views/user/templates/login.view.client.html
@@ -20,7 +20,7 @@
        class="btn btn-primary btn-block">
         Login
     </a>
-    <a href="/auth/facebook" class="btn btn-danger btn-block">
+    <a href="/auth/facebook" class="btn wd-btn-facebook btn-block">
         <span class="fa fa-facebook"></span>
         Facebook
     </a>
