--- a/public/assignment/views/widget/templates/widget-edit.view.client.html
+++ b/public/assignment/views/widget/templates/widget-edit.view.client.html
@@ -5,7 +5,7 @@
                href="#!/user/{{model.userId}}/website/{{model.websiteId}}/page/{{model.pageId}}/widget">
                 <span class="glyphicon glyphicon glyphicon-menu-left"></span>
             </a>
-            <a class="navbar-brand">Edit Heading</a>
+            <a class="navbar-brand">Edit Widget</a>
             <p class="navbar-text pull-right">
                 <a ng-click="model.updateWidget(model.widget)"
                    class="navbar-link">
@@ -16,23 +16,25 @@
     </div>
 </nav>
 
-<div ng-switch="model.widget.type.toLowerCase()">
-    <div ng-switch-when="heading">
-        <div ng-include="'views/widget/templates/widget-heading-edit.view.client.html'"></div>
-    </div>
-    <div ng-switch-when="image">
-        <div ng-include="'views/widget/templates/widget-image-edit.view.client.html'"></div>
-    </div>
-    <div ng-switch-when="youtube">
-        <div ng-include="'views/widget/templates/widget-youtube-edit.view.client.html'"></div>
-    </div>
-    <div ng-switch-when="html">
-        <div ng-include="'views/widget/templates/widget-youtube-edit.view.client.html'"></div>
-    </div>
-    <div ng-switch-when="input">
-        <div ng-include="'views/widget/templates/widget-input-edit.view.client.html'"></div>
+<form name="editWidgetForm" novalidate>
+    <div ng-switch="model.widget.type.toLowerCase()">
+        <div ng-switch-when="heading">
+            <div ng-include="'views/widget/templates/widget-heading-edit.view.client.html'"></div>
+        </div>
+        <div ng-switch-when="image">
+            <div ng-include="'views/widget/templates/widget-image-edit.view.client.html'"></div>
+        </div>
+        <div ng-switch-when="youtube">
+            <div ng-include="'views/widget/templates/widget-youtube-edit.view.client.html'"></div>
+        </div>
+        <div ng-switch-when="html">
+            <div ng-include="'views/widget/templates/widget-youtube-edit.view.client.html'"></div>
+        </div>
+        <div ng-switch-when="input">
+            <div ng-include="'views/widget/templates/widget-input-edit.view.client.html'"></div>
+        </div>
     </div>
 
-</div>
+</form>
 
 <div ng-include="'views/common/footer.view.client.html'"></div>
