--- a/public/assignment/views/widget/templates/widget-html-edit.view.client.html
+++ b/public/assignment/views/widget/templates/widget-html-edit.view.client.html
@@ -1,11 +1,14 @@
 <div class="container-fluid">
-
+    <h3 ng-show="editWidgetForm.$submitted && editWidgetForm.name.$invalid"
+        class="alert alert-danger">Widget name is required</h3>
     <label for="name">Name</label>
     <input ng-model="model.widget.name"
+           name="name"
            class="form-control"
            id="name"
            placeholder="Dog Video"
-           value="Cat video!">
+           value="Cat video!"
+           required>
     <label for="text">Text</label>
     <textarea ng-model="model.widget.text"
               class="form-control"
@@ -31,8 +34,10 @@
          ta-toolbar="[['h1','h2','h3'],['bold','italics','underline','strikeThrough'],
         ['ul','ol'],['justifyLeft','justifyCenter','justifyRight','justifyFull'],
         ['indent','outdent'],['html']]">
-        PIGSCRAMBLE
     </div>
-
+    <input type="submit"
+           value="Update"
+           ng-click="model.updateWidget(model.widget)"
+           class="btn btn-block btn-success"/>
 
 </div>
