--- a/public/assignment/views/widget/templates/widget-youtube-edit.view.client.html
+++ b/public/assignment/views/widget/templates/widget-youtube-edit.view.client.html
@@ -1,11 +1,14 @@
 <div class="container-fluid">
-
+    <h3 ng-show="editWidgetForm.$submitted && editWidgetForm.name.$invalid"
+        class="alert alert-danger">Widget name is required</h3>
     <label for="name">Name</label>
     <input ng-model="model.widget.name"
+           name="name"
            class="form-control"
            id="name"
            placeholder="Dog Video"
-           value="Cat video!">
+           value="Cat video!"
+           required>
     <label for="text">Text</label>
     <textarea ng-model="model.widget.text"
               class="form-control"
@@ -23,6 +26,10 @@
            type="text"
            class="form-control"
            placeholder="1%"/>
+    <input type="submit"
+           value="Update"
+           ng-click="model.updateWidget(model.widget)"
+           class="btn btn-block btn-success"/>
     <a ng-click="model.deleteWidget(model.pageId, model.widgetId)"
        class="btn btn-block btn-danger">Delete</a>
 
