Updated Home Page
Updated Home Page

--- a/public/assignment/views/home/templates/home.html
+++ b/public/assignment/views/home/templates/home.html
@@ -26,8 +26,8 @@
 
     <!-- Main jumbotron for a primary marketing message or call to action -->
     <div class="jumbotron">
-        <h1>Assignment 5</h1>
-        <p>This is my submission for Assignment 5. I have created database services.</p>
+        <h1>Assignment 6</h1>
+        <p>This is my submission for Assignment 6. I secured the program.</p>
         <p ng-show="!model.currentUser._id"><a href="#!/login">Click here to login.</a></p>
         <p ng-show="model.currentUser._id"><a href="#!/profile">Click here to go to your profile.</a></p>
     </div>
@@ -43,5 +43,7 @@
     <p>This assignment served as a means of setting up dynamic pages to map out the core functionality of this application.</p>
     <h3>Assignment 4</h3>
     <p>This is my submission for Assignment 4. I have created server side services.</p>
+    <h1>Assignment 5</h1>
+    <p>This is my submission for Assignment 5. I have created database services.</p>
 
 </div>
